class/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: khafan-app
  labels:
    environment: production
    app: khafan-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: khafan-app
      environment: production
  template:
    metadata:
      labels:
        app: khafan-app
        environment: production
    spec:
      containers:
        - name: app
          image: khafan_app:v1
        - name: nginx
          image: khafan_app:nginx
