class/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-khafan
spec:
  selector:
    environment: production
    app: khafan-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30333
  type: NodePort
